--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇨🇳 中国-6.35MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30130, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd1.52147.top, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-920.5KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-2.58MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-8.88MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30130, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.65MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇨🇳 中国-3.47MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30080, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.37MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30080, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-761.0KB/s(Youtube:不良林), server: 159.27.90.254, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.27.90.254}}
-  - {name: 🇺🇸 美国-303.2KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-2.53MB/s(Youtube:不良林), server: a.nmc168.ml, port: 52848, type: vmess, uuid: 6007d258-77fc-43b7-b0fe-63eab16ae430, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-704.3KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.39MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.87MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇮🇳 印度-1.61MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-6.35MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-920.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.88MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-761.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-303.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-704.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇳 中国-6.35MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-920.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.88MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-761.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-303.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-704.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-6.35MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-920.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.88MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-761.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-303.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-704.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇳 中国-6.35MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-920.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.88MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-761.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-303.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-704.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇳 中国-6.35MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-920.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.88MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-761.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-303.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-704.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-6.35MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-920.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.88MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-761.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-303.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-704.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-6.35MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-920.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.88MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-761.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-303.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-704.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
