--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.57MB/s(Youtube:不良林), server: a.nmc168.ml, port: 52848, type: vmess, uuid: 6007d258-77fc-43b7-b0fe-63eab16ae430, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.55MB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.87MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇦🇺 澳大利亚-1.96MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇨🇳 中国-360.5KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30130, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.49MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.04MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-994.0KB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
-  - {name: 🇺🇸 美国-4.75MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
+  - {name: 🇺🇸 美国-10.09MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20719, type: trojan, password: 46ceba76-28b9-37df-8b08-b288e75aa646, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇨🇳 中国-4.11MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30080, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-320.4KB/s(Youtube:不良林), server: hnyd.52147.top, port: 30120, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-164.0KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-3.65MB/s(Youtube:不良林), server: mosaic.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: mosaic.marythunt.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-2.46MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.48MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: fb61d738-ef95-446d-9004-c93a1a975cad, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇺🇸 美国-3.45MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 8fefb1b5-bee7-4736-8e00-cad32ab113d1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-994.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-164.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.65MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-994.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-164.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.65MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-994.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-164.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.65MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-994.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-164.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.65MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-994.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-164.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.65MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-994.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-164.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.65MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.04MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-994.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-164.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.65MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
